# test-harness

./: .gitignore  AGENTS.md  README.md  SECURITY.md  action.yml  build.gradle.kts  gradle.properties  package-lock.json  package.json  settings.gradle.kts  tsconfig.json
.github/workflows/: ci.yml  coffer-nightly.yml  coffer-release-candidate.yml  nightly-soak.yml
adapters/coffer/: build.gradle.kts
adapters/parcels/: build.gradle.kts
bridge/: build.gradle.kts
client/: Cargo.toml
client/src/: main.rs
config/: pins.yaml  portfolio.yaml  production-manifest.yaml  raid-safety-matrix.yaml
docs/: architecture.md  ci-cross-repo-auth.md  coffer-known-bad-baselines.md  issue-coverage.md  portfolio-assessment.md  portfolio.md  production-manifest.md  raid-safety-matrix.md  scenarios.md
schemas/: raid-safety-matrix.schema.json  report.schema.json  scenario.schema.json
scripts/: bootstrap-java.mjs  cargo.mjs  clean.mjs  corrupt-rooms-hull.mjs  gradle.mjs  mutate-rooms-hull-matrix.mjs  seed-rooms-hull-matrix.mjs  write-artifact-provenance.mjs
src/: action-inputs.test.ts  action-inputs.ts  artifacts.ts  bridge-client.ts  cli.ts  client.test.ts  client.ts  errors.test.ts  errors.ts  log-monitor.test.ts  log-monitor.ts  manifest.test.ts  manifest.ts  portfolio.test.ts  portfolio.ts  production-manifest.test.ts  production-manifest.ts  raid-safety-matrix.test.ts  raid-safety-matrix.ts  report-compare.test.ts  report-compare.ts  report.test.ts  report.ts  runner.test.ts  runner.ts  schema.ts  server.ts  types.ts  utils.test.ts  utils.ts  workflow-security.test.ts
(+72 files in other folders)
