[package]
name = "ouro-harness-client"
version = "1.0.0"
edition = "2024"
license = "MIT"
publish = false

[dependencies]
azalea = { git = "https://github.com/azalea-rs/azalea", rev = "c35b57ebf82fa8b26ada77ab9eb795e3827d6c16", default-features = false, features = ["log"] }
eyre = "0.6.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["io-std", "io-util", "macros", "rt-multi-thread", "time"] }

[profile.dev]
debug = 1

[profile.release]
debug = "line-tables-only"
lto = "thin"
